// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Game component is rendering default 1`] = `
<div>
  <header>
    TicTacToe
    <button
      onClick={[Function]}
      type="button"
    >
       New Game
    </button>
  </header>
  <div
    className="Game"
  >
    <Board />
  </div>
</div>
`;

exports[`Game component is rendering draw 1`] = `
<div>
  <header>
    TicTacToe
    <button
      onClick={[Function]}
      type="button"
    >
       New Game
    </button>
  </header>
  <div
    className="Game"
  >
    <Board />
  </div>
  <Modal
    names={
      Array [
        "juan",
        "camilo",
      ]
    }
    status="draw"
  />
</div>
`;

exports[`Game component is rendering error 1`] = `
<div>
  <header>
    TicTacToe
    <button
      onClick={[Function]}
      type="button"
    >
       New Game
    </button>
  </header>
  <div
    className="Game"
  >
    <Board />
  </div>
  <Modal
    names={
      Array [
        "juan",
        "camilo",
      ]
    }
    status="wrong_move"
  />
</div>
`;

exports[`Game component is rendering winner-0 1`] = `
<div>
  <header>
    TicTacToe
    <button
      onClick={[Function]}
      type="button"
    >
       New Game
    </button>
  </header>
  <div
    className="Game"
  >
    <Board />
  </div>
  <Modal
    names={
      Array [
        "juan",
        "camilo",
      ]
    }
    status="winner-0"
  />
</div>
`;

exports[`Game component is rendering winner-1 1`] = `
<div>
  <header>
    TicTacToe
    <button
      onClick={[Function]}
      type="button"
    >
       New Game
    </button>
  </header>
  <div
    className="Game"
  >
    <Board />
  </div>
  <Modal
    names={
      Array [
        "juan",
        "camilo",
      ]
    }
    status="winner-1"
  />
</div>
`;
